--- a/ticketing.html
+++ b/ticketing.html
@@ -405,7 +405,7 @@
     </div> 
     <div id="food_and_drinks">
         <article>
-            <img src="img_mandah/eat & drink/popcorn.png" alt="" width="10%" height="10%">
+            <img src="img_mandah/eat & drink/popcorn.png" alt="" >
             <h6>Попкорн</h6>
             <p>5,000₮</p>
             <button>+</button>
@@ -413,7 +413,7 @@
             <button>-</button>
         </article>
         <article>
-            <img src="img_mandah/eat & drink/coke.png" alt="" width="10%" height="10%">
+            <img src="Images/cola.png"" >
             <h6>Кока Кола</h6>
             <p>3,000₮</p>
             <button>+</button>
@@ -421,7 +421,7 @@
             <button>-</button>
         </article>
         <article>
-            <img src="img_mandah/eat & drink/ice_cream.png" alt="" width="10%" height="10%">
+            <img src="Images/icecream1.png" alt="" >
             <h6>Зайрмаг</h6>
             <p>2,000₮</p>
             <button>+</button>
@@ -429,7 +429,7 @@
             <button>-</button>
         </article>
         <article>
-            <img src="img_mandah/eat & drink/chips.png" alt="" width="10%" height="10%">
+            <img src="img_mandah/eat & drink/chips.png" alt="" >
             <h6>Coka Cola</h6>
             <p>4,000₮</p>
             <button>+</button>
@@ -464,7 +464,7 @@
                 <p class="cost">60,000₮</p>
             </li>
             <li>
-                <p>Хүүхэд</p>
+                <p>Хүүхэд_</p>
                 <button>-</button>
                 <span>0</span>
                 <button>+</button>
@@ -501,16 +501,16 @@
             </ul>
             <ul>
                 <li>
-                    <label for="internet_bank">Oнлайн банк</label>
-                    <input type="radio" id="internet_bank">
+                    <label for="internet_bank" class="radio-label">Oнлайн банк</label>
+                    <input type="radio" id="internet_bank" class="custom-radio">
                 </li>
                 <li>
-                    <label for="qPay">QPay</label>
-                    <input type="radio" id="qPay">
+                    <label for="qPay" class="radio-label">QPay</label>
+                    <input type="radio" id="qPay" class="custom-radio">
                 </li>
                 <li>
-                    <label for="card">Visa Card</label>
-                    <input type="radio" id="card">
+                    <label for="card" class="radio-label">Visa Card</label>
+                    <input type="radio" id="card" class="custom-radio">
                 </li>
             </ul>
             <button>Баталгаажуулах</button>
