--- a/ticketing.html
+++ b/ticketing.html
@@ -405,7 +405,7 @@
     </div> 
     <div id="food_and_drinks">
         <article>
-            <img src="img_mandah/eat & drink/popcorn.png" alt="" >
+            <img src="Images/popcorn.png" alt="" >
             <h6>Попкорн</h6>
             <p>5,000₮</p>
             <button>+</button>
