--- a/ticketing.html
+++ b/ticketing.html
@@ -408,35 +408,52 @@
             <img src="Images/popcorn.png" alt="" >
             <h6>Попкорн</h6>
             <p>5,000₮</p>
-            <button>+</button>
-            <span>0</span>
-            <button>-</button>
+            <div class="counts_of_fd">
+                <button>+</button>
+                <span>0</span>
+                <button>-</button>
+            </div>
         </article>
         <article>
-            <img src="Images/cola.png"" >
+            <img src="Images/cola.png" alt="cola" >
             <h6>Кока Кола</h6>
             <p>3,000₮</p>
-            <button>+</button>
-            <span>0</span>
-            <button>-</button>
+            <div class="counts_of_fd">
+                <button>+</button>
+                <span>0</span>
+                <button>-</button>
+            </div>
         </article>
         <article>
-            <img src="Images/icecream1.png" alt="" >
+            <img src="Images/icecream1.png" alt="ice cream" >
             <h6>Зайрмаг</h6>
             <p>2,000₮</p>
-            <button>+</button>
-            <span>0</span>
-            <button>-</button>
+            <div class="counts_of_fd">
+                <button>+</button>
+                <span>0</span>
+                <button>-</button>
+            </div>
         </article>
         <article>
-            <img src="img_mandah/eat & drink/chips.png" alt="" >
-            <h6>Coka Cola</h6>
+            <img src="img_mandah/eat & drink/chips.png" alt="chips" >
+            <h6>Чипс</h6>
             <p>4,000₮</p>
-            <button>+</button>
-            <span>0</span>
-            <button>-</button>
+            <div class="counts_of_fd">
+                <button>+</button>
+                <span>0</span>
+                <button>-</button>
+            </div>
         </article>
-        
+        <article>
+            <img src="Images/americano.png" alt="americano" >
+            <h6>Американо</h6>
+            <p>6,000₮</p>
+            <div class="counts_of_fd">
+                <button>+</button>
+                <span>0</span>
+                <button>-</button>
+            </div>
+        </article>
     </div>
     <aside>
         <h4>ТАНЫ СОНГОЛТ</h4>
