--- a/movie.html
+++ b/movie.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <meta name="description" content="PrimeCineplex кино театрын киноны нэр, poster, trailer, үзэх насны ангилал, үргэлжлэх хугацаа, төрөл, дэлгэцээс буух огноо, товч үйл явдал, гарах салбар, өдөр, цаг, imdb оноо, rotten tomatoes оноо, үзэгчдийн оноо, зохиолч, жүжигчдийн зураг, текстэн мэдээлэл, үзэгчдийн бичсэн сэтгэгдэл, оноо, үзэгчийн зураг, нэр, сэтгэгдэл бичих хэсэгтэй хуудас юм.">
     <link rel="stylesheet" href="css/movie.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>PrimeCineplex</title>
+    <title>PrimeCineplexMongolia</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -216,35 +218,41 @@
 
     </main>
     <footer>
-        <div>
+        <div id="address_info">
              <address>
              <ul>
                  <li>
-                     <img src="Images/footer_location-icon.png" style="height: 30px;" alt="location icon">
+                     <img src="Images/footer_location-icon.png" alt="location icon">
                      <p>Монгол улс, Улаанбаатар хот, <br>
                          Хан-Уул дүүрэг 11-р хороо, <br>
                          Дүнжингаравын гудамж, <br>
                          Зайсан Хилл Цогцолбор, 1-р давхар</p>
                  </li>
                  <li>
-                     <img src="Images/footer_mail-icon.png" style="height: 30px;" alt="mail icon">
+                     <img src="Images/footer_mail-icon.png" alt="mail icon">
                      <a href="mailto:info@primecineplex.mn">@primecineplex.mn</a>
                  </li>
                  <li>
-                     <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
+                     <img src="Images/footer_phone-icon.png"  alt="phone icon">
                      <a href="tel:+976-7510-0000">+976-7510-0000</a>
                  </li>
              </ul>
              </address>
         </div>
-        <div>
-            <p>Зайсан Хилл Комплекс</p>
-            <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" height="50px" alt="google map photo"></a></p>
-            <p>Энканто товер</p>
-            <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" height="50px" alt="google map photo"></a></p>
-            <p>Ботаник центер</p>
-            <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png"height="50px" alt="google map photo"></a></p>
-        </div>  
-    </footer>
+        <div id="map">
+             <div class="location">
+                 <p>Зайсан Хилл Комплекс</p>
+                 <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" alt="google map photo"></a></p>
+             </div>
+             <div class="location">
+                 <p>Энканто товер</p>
+                 <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" alt="google map photo"></a></p>
+             </div>
+             <div class="location">
+                 <p>Ботаник центер</p>
+                 <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" alt="google map photo"></a></p>
+             </div>
+         </div>  
+     </footer>
 </body>
 </html>
