--- a/ticketing.html
+++ b/ticketing.html
@@ -13,8 +13,10 @@
         <img src="Images/logo.jpg" alt="logo icon">
         <h1>Захиалга</h1>
         <a href="login.html">Нэвтрэх</a>
-        <p>Дуусах хугацаа: </p>
-        <p>2:47</p>
+        <div id="info_ticketing">
+            <p>Дуусах хугацаа: </p>
+            <p>2:47</p>
+        </div>
     </nav>
     <div id="movie_screen">
         <h2>Дэлгэц</h2>
