--- a/ticketing.html
+++ b/ticketing.html
@@ -12,10 +12,12 @@
     <nav id="header">
         <img src="Images/logo.jpg" alt="logo icon">
         <h1>Захиалга</h1>
-        <a href="login.html">Нэвтрэх</a>
+        
         <div id="info_ticketing">
-            <p>Дуусах хугацаа: </p>
-            <p>2:47</p>
+            <a href="login.html">Нэвтрэх</a>
+            <section id="time">
+                <p>Дуусах хугацаа</p> <p>2:47</p>
+            </section>
         </div>
     </nav>
     <div id="movie_screen">
