--- a/movie.html
+++ b/movie.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/style.css">
     <title>PrimeCineplexMongolia</title>
 </head>
-
 <body>
     <header>
         <nav>
@@ -30,7 +29,7 @@
                 <li><a href="aboutus.html">ЗӨВХӨН МАНАЙД</a></li>
                 <li><a href="aboutus.html">ҮЙЛЧИЛГЭЭ</a></li>
                 <li><a href="aboutus.html">БИДНИЙ ТУХАЙ</a></li>
-                <li><a href="login.html">НЭВТРЭХ</a></li>
+                <li><a id="login" href="login.html">НЭВТРЭХ</a></li>
             </ul>
         </nav>
     </header>
