--- a/movie.html
+++ b/movie.html
@@ -26,7 +26,7 @@
         <nav>
             <a href="index.html"><img src="Images/logo.jpg" id="logo" alt="primeLogo"></a>
             <ul id="menu">
-                <li><a href="nowplaying.html">КИНО</a></li>
+                <li><a href="js_now.html">КИНО</a></li>
                 <li><a href="aboutus.html">ЗӨВХӨН МАНАЙД</a></li>
                 <li><a href="aboutus.html">ҮЙЛЧИЛГЭЭ</a></li>
                 <li><a href="aboutus.html">БИДНИЙ ТУХАЙ</a></li>
