--- a/js_now.html
+++ b/js_now.html
@@ -37,8 +37,8 @@
                                     {
                                         name: "Будилаан",
                                         img: "Images/nowplaying_poster4.png",
-                                        imdb: "?",
-                                        rtr: "?%",
+                                        imdb: "NR",
+                                        rtr: "NR",
                                     },
                                     {
                                         name: "The Creator",
