--- a/ticketing.html
+++ b/ticketing.html
@@ -20,7 +20,73 @@
             </section>
         </div>
     </nav>
-    <div id="movie_screen">
+    
+    <div class="container">
+        <h2>Дэлгэц</h2>
+        <div class="screen"></div>
+        
+        <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+          </div>
+          <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat occupied"></div>
+            <div class="seat occupied"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+          </div>
+          <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat occupied"></div>
+            <div class="seat occupied"></div>
+          </div>
+          <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+          </div>
+          <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat occupied"></div>
+            <div class="seat occupied"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+          </div>
+          <div class="row">
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat"></div>
+            <div class="seat occupied"></div>
+            <div class="seat occupied"></div>
+            <div class="seat occupied"></div>
+            <div class="seat"></div>
+          </div>
+    </div>
+    <!-- <div id="movie_screen">
         <h2>Дэлгэц</h2>
         <h3>A</h3>
         <ul>
@@ -399,7 +465,7 @@
                 <input type="checkbox" id="H_ch_24" name="" value="">
             </li>
         </ul>   
-        <h3>H</h3>
+        <h3>H</h3> -->
         <img src="img_mandah/chair/hooson.PNG" alt="chair" width="3%" height="3%">
         <p>Хоосон</p>
         <img src="img_mandah/chair/songoson.PNG" alt="chair" width="3%" height="3%">
