--- a/nowplaying.html
+++ b/nowplaying.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Одоо гарч буй кинонууд, дэлгэцнээ гарч буй кино, кино үзэх">
     <link rel="stylesheet" href="css/nowplaying.css">
     <link rel="stylesheet" href="css/style.css"/>
+    <script type="module" src="json2.js" defer></script>
 </head>
 <body>
     <header>
@@ -34,6 +35,11 @@
     </header>
     <main>
         <h2>МАНАЙ ДЭЛГЭЦНЭЭ</h2>
+        <div id="category-links">
+            <a href="movie.html">All</a>
+            <a href="movie.html?category=horror">Horror</a>
+            <a href="movie.html?category=drama">Drama</a>
+        </div>
         <section>
             <article>
                 <a href="movie.html" class="movie_poster">
