--- a/nowplaying.html
+++ b/nowplaying.html
@@ -39,6 +39,7 @@
             <a href="movie.html">All</a>
             <a href="movie.html?category=horror">Horror</a>
             <a href="movie.html?category=drama">Drama</a>
+            <a href="movie.html?category=drama">Drama</a>
         </div>
         <section>
             <article>
