nowplaying link soliv

--- a/nowplaying.html
+++ b/nowplaying.html
@@ -36,9 +36,9 @@
     <main>
         <h2>МАНАЙ ДЭЛГЭЦНЭЭ</h2>
         <div id="category-links">
-            <a href="movie.html">All</a>
-            <a href="movie.html?category=horror">Horror</a>
-            <a href="movie.html?category=drama">Drama</a>
+            <a href="nowplaying.html">All</a>
+            <a href="nowplaying.html?category=horror">Horror</a>
+            <a href="nowplaying.html?category=drama">Drama</a>
         </div>
         <section>
             <article>
