--- a/js_now.html
+++ b/js_now.html
@@ -16,6 +16,7 @@
                 List(){
                     const mov = [
                                     {
+                                        id:1,
                                         name: "Suzume",
                                         img: "Images/nowplaying_poster1.png",
                                         imdb: 7.7,
@@ -23,6 +24,7 @@
                                         category: "Animation",
                                     },
                                     {
+                                        id:2,
                                         name: "Elemental",
                                         img: "Images/nowplaying_poster2.png",
                                         imdb: "7.0",
@@ -30,6 +32,7 @@
                                         category: "Rom-Com",
                                     },
                                     {
+                                        id:3,
                                         name: "The NUN",
                                         img: "Images/nowplaying_poster3.png",
                                         imdb: 5.8,
@@ -37,6 +40,7 @@
                                         category: "Horror",
                                     },
                                     {
+                                        id:4,
                                         name: "Будилаан",
                                         img: "Images/nowplaying_poster4.png",
                                         imdb: "NR",
@@ -44,6 +48,7 @@
                                         category: "Adventure",
                                     },
                                     {
+                                        id:5,
                                         name: "The Creator",
                                         img: "Images/comingsoon_poster1.png",
                                         imdb: 7.2,
@@ -51,6 +56,7 @@
                                         category: "Action",
                                     },
                                     {
+                                        id:6,
                                         name: "Paw Patrol",
                                         img: "Images/comingsoon_poster2.png",
                                         imdb: 6.1,
@@ -58,6 +64,7 @@
                                         category: "Animation",
                                     },
                                     {
+                                        id:7,
                                         name: "Cobweb",
                                         img: "Images/comingsoon_poster3.png",
                                         imdb: 5.9,
@@ -65,6 +72,7 @@
                                         category: "Horror",
                                     },
                                     {
+                                        id:8,
                                         name: "Saw X",
                                         img: "Images/comingsoon_poster4.png",
                                         imdb: 7.2,
@@ -72,6 +80,7 @@
                                         category: "Horror",
                                     },
                                     {
+                                        id:9,
                                         name: "The Exorcist",
                                         img: "Images/comingsoon_poster5.png",
                                         imdb: 7.1,
@@ -97,6 +106,7 @@
             }
             class Product {
             constructor(product) {
+                this.id = product.id;
                 this.name = product.name;
                 this.img = product.img;
                 this.imdb = product.imdb;
