object dr category, id nemev

--- a/js_now.html
+++ b/js_now.html
@@ -17,54 +17,72 @@
                 List(){
                     const mov = [
                                     {
+                                        id:1,
+                                        category:"Animation",
                                         name: "Suzume",
                                         img: "Images/nowplaying_poster1.png",
                                         imdb: 7.7,
                                         rtr: "96%",
                                     },
                                     {
+                                        id:2,
+                                        category:"Animation",
                                         name: "Elemental",
                                         img: "Images/nowplaying_poster2.png",
                                         imdb: "7.0",
                                         rtr: "74%",
                                     },
                                     {
+                                        id:3,
+                                        category:"Horror",
                                         name: "The NUN",
                                         img: "Images/nowplaying_poster3.png",
                                         imdb: 5.8,
                                         rtr: "52%",
                                     },
                                     {
+                                        id:4,
+                                        category:"Drama",
                                         name: "Будилаан",
                                         img: "Images/nowplaying_poster4.png",
                                         imdb: "NR",
                                         rtr: "NR",
                                     },
                                     {
+                                        id:5,
+                                        category:"Actioin",
                                         name: "The Creator",
                                         img: "Images/comingsoon_poster1.png",
                                         imdb: 7.2,
                                         rtr: "67%",
                                     },
                                     {
+                                        id:6,
+                                        category:"Animation",
                                         name: "Paw Patrol",
                                         img: "Images/comingsoon_poster2.png",
                                         imdb: 6.1,
                                         rtr: "84%",
                                     },
                                     {
+                                        id:7,
+                                        category:"Horror",
                                         name: "Cobweb",
                                         img: "Images/comingsoon_poster3.png",
                                         imdb: 5.9,
                                         rtr: "59%",
                                     },
                                     {
+                                        id:8,
+                                        category:"Horror",
                                         name: "Saw X",
                                         img: "Images/comingsoon_poster4.png",
                                         imdb: 7.2,
                                         rtr: "83%",
                                     },
                                     {
+                                        id:9,
+                                        category:"Horror",
                                         name: "The Exorcist",
                                         img: "Images/comingsoon_poster5.png",
                                         imdb: 7.1,
