id category nemev

--- a/js_now.html
+++ b/js_now.html
@@ -107,6 +107,8 @@
             }
             class Product {
             constructor(product) {
+                this.id=product.id;
+                this.category = product.category;
                 this.name = product.name;
                 this.img = product.img;
                 this.imdb = product.imdb;
