--- a/js_now.html
+++ b/js_now.html
@@ -114,7 +114,7 @@
                                     {
                                         id:1,
                                         category:"Animation",
-                                        name: "Suzume",
+                                        name: "uzume",
                                         img: "Images/nowplaying_poster1.png",
                                         imdb: 7.7,
                                         rtr: "96%",
@@ -188,7 +188,7 @@
                         let data = `
                         <h2 style="color: var(--color-white);
                         padding: 2rem;
-                        margin-bottom: 4rem;
+                        margin-bottom: 1rem;
                         ">МАНАЙ ДЭЛГЭЦНЭЭ</h2>
                         <section>`;
                     for( const product of p){
